# dengue-africa

./: .gitignore  Makefile  README.md  environment.yml  local.mk.example  main.py  pyproject.toml  run_loop.sh  submit_baseline_gpw.pbs  submit_baseline_restricted.pbs
nextflow/: main.nf  nextflow.config
notes/: sm_lc_analysis.md
scripts/: predict_africa_2024.py  submit_baseline_lc_seasonal.pbs  submit_baseline_lc_sm_seasonal.pbs  submit_restricted_lc_sm_temporal.pbs  submit_restricted_lc_temporal.pbs
src/: definitions.py  local_paths.py.example
src/dm/: DiT.py  sample.py  train_autoencoder_x_high.py  train_autoencoder_x_med.py  train_autoencoder_x_static.py  train_autoencoder_y_batch.py  train_dit.py  utils_training.py
src/eo_data/: __init__.py  aedes_suitability.py  build_sm_cache.py  dengue_risk.py  era5.py  modis.py  pipeline_data.py
src/models/: __init__.py  config.py  convlstm.py  model_utils.py  pipeline.py  test_autoencoder.py  training.py  training_autoencoder  training_autoencoder.py  transformer.py
src/transform/: __init__.py  cloud_adapter.py  majortom.py
src/utils/: __init__.py  analysis.py  data_load.py  general.py  seasonal_encoding.py  visualization.py  visualize_predictions.py
tests/: cloud_pipeline.py  dengue_rasterizer.py  modis_collection.py
