[project]
name = "dengue-africa"
version = "0.1.0"
description = "Package to predict dengue at high temporal resolution"
authors = [
  { name = "Riccardo D’Ercole" }
]
readme = "README.md"
requires-python =">=3.11"

dependencies = [
    "xarray>=2025.8.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "geopandas>=1.1.1",
    "rasterio>=1.4.3",
    "tqdm>=4.67.1",
    "zarr>=3.1.3",
    "earthengine-api>=1.6.10",
    "geemap>=0.36.4",
    "rioxarray>=0.19.0",
    "modis-tools>=1.2.0",
    "notebook>=7.4.7",
    "pyhdf>=0.11.6",
    "h5py>=3.12.1",
    "numpy>=2.3.3",
    "earthaccess>=0.15.1",
    "satpy>=0.58.0",
    "gdal==3.10.3",
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "h5netcdf>=1.7.3",
    "pystac-client>=0.9.0",
    "cartopy>=0.25.0",
    "cdsapi>=0.7.7",
    "netcdf4>=1.7.3",
    "pyreadr>=0.5.4",
    "statsmodels>=0.14.6",
    "pygam>=0.11.0",
    "pyarrow>=22.0.0",
    "fastparquet>=2024.11.0",
    "torch>=2.9.1",
    "timm>=1.0.22",
    "torchgeo>=0.8.0",
    "minio>=7.2.20",
    "ultralytics>=8.4.4",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "py-spy>=0.4.1",
]
